--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "author": "Brendon Mota",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.13"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
