--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "celebrate": "^13.0.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.13"
   },
