Enable .env file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,11 @@ services:
     - "27017:27017"
     volumes:  
     - './data:/data/db'
+    env_file:
+     - ./server/.env
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
   nodejs:
     container_name: alinecampos_nodejs
     build: ./
